--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,17 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: tomato;
+}
+
+a {
+  color: darkcyan;
+  text-decoration: none;
+  transition: all 300ms;
+}
+
+a:hover {
+  color: tomato;
 }
 
 button {
@@ -20,3 +30,17 @@ button {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.emphAsis {
+  text-emphasis: filled sesame #555;
+}
+
+:root {
+  --thing: 360deg;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(var(--thing));
+  }
+};
